bk_ida/gccida/g2/set_value_regno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_value_regno/src/regrename.c:1609:44: error: must use 'enum' tag to refer to type 'machine_mode'
void  set_value_regno( unsigned int regno, machine_mode mode,  struct value_data *vd) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_value_regno/src/regrename.c:1620:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_value_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_value_regno/src/obj/regrename.o] Error 1
